--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "amazon-cognito-identity-js": "^6.0.1",
     "aws-amplify": "^5.0.5",
     "react": "^18.2.0",
+    "react-cookies": "^0.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.5",
     "react-scripts": "5.0.1",
